[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Globals.gd" type="Script" id=1]
[ext_resource path="res://objs/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://objs/FloorPlatform2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/button_reset.gd" type="Script" id=4]
[ext_resource path="res://objs/level_select.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]

_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Globals" type="Node2D" parent="." index="0"]

script = ExtResource( 1 )
next_level = null

[node name="label_win" type="RichTextLabel" parent="Globals" index="0"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 156.0
margin_top = 145.0
margin_right = 222.0
margin_bottom = 161.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "YOU WIN!"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect" ]

[node name="label_lose" type="RichTextLabel" parent="Globals" index="1"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 92.0
margin_top = 83.0
margin_right = 164.0
margin_bottom = 113.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "YOU LOSE TRY AGAIN"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect" ]

[node name="next_level_delay" type="Timer" parent="Globals" index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Background" parent="." index="1" instance=ExtResource( 2 )]

_sections_unfolded = [ "Offset", "Transform" ]

[node name="FloorPlatforms" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 0, 582 )

[node name="FloorPlatform3" parent="FloorPlatforms" index="2" instance=ExtResource( 3 )]

position = Vector2( 78, 0 )
scale = Vector2( 1, 1 )

[node name="FloorPlatform4" parent="FloorPlatforms" index="3" instance=ExtResource( 3 )]

position = Vector2( 156, 0 )
scale = Vector2( 1, 1 )

[node name="FloorPlatform5" parent="FloorPlatforms" index="4" instance=ExtResource( 3 )]

position = Vector2( 234, 0 )
scale = Vector2( 1, 1 )

[node name="FloorPlatform6" parent="FloorPlatforms" index="5" instance=ExtResource( 3 )]

position = Vector2( 312, 0 )
scale = Vector2( 1, 1 )

[node name="FloorPlatform7" parent="FloorPlatforms" index="6" instance=ExtResource( 3 )]

position = Vector2( 390, 0 )
scale = Vector2( 1, 1 )

[node name="FloorPlatform8" parent="FloorPlatforms" index="7" instance=ExtResource( 3 )]

position = Vector2( 468, 0 )
scale = Vector2( 1, 1 )

[node name="button_reset" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 32.0
margin_right = 112.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset"
flat = false
align = 1
script = ExtResource( 4 )

[node name="level_select" parent="." index="4" instance=ExtResource( 5 )]

[connection signal="timeout" from="Globals/next_level_delay" to="Globals" method="_on_next_level_delay_timeout"]

[connection signal="button_up" from="button_reset" to="button_reset" method="_on_button_reset_button_up"]


